Fix chart filter pills z-index

--- a/local_modules/app/public/stylesheets/module/sort-bar.css
+++ b/local_modules/app/public/stylesheets/module/sort-bar.css
@@ -233,7 +233,7 @@
 	padding-bottom: 30px;
 }
 
-.array-choropleth .filter-bar-fixed-bottom {
+.filter-bar-fixed-bottom {
 	z-index: 1;
 }
 
